--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,6 @@ github_username:  kylegrover
 footer_copyright_text: Developed, designed, and hosted by Kyle Grover.
 collections:
   - client_work
-
+cloudinary_url: https://res.cloudinary.com/kylegrover/image/upload/
 # Build settings
 markdown: kramdown
