--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ port: 1234
 github_username:  kylegrover
 footer_copyright_text: Developed, designed, and hosted by Kyle Grover.
 collections:
-  - client_work
+  - client-work
 cloudinary_url: https://res.cloudinary.com/kylegrover/image/upload/
 # Build settings
 markdown: kramdown
