--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,17 @@
 title: Kyle Grover
 email: kyle@kylegrover.com
 google_tag_manager_id: 89386910-2
+phone: (831) 222-0527
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://kylegrover.com # the base hostname & protocol for your site, e.g. http://example.com
 port: 1234
 github_username:  kylegrover
 footer_copyright_text: Developed, designed, and hosted by Kyle Grover.
 collections:
-  - client-work
+  client-work:
+    output: true
+  advice-for-website-owners
+    output: true
 cloudinary_url: https://res.cloudinary.com/kylegrover/image/upload/
 # Build settings
 markdown: kramdown
